--- a/Dev-Blog/BlazorServer/wwwroot/css/Modals.css
+++ b/Dev-Blog/BlazorServer/wwwroot/css/Modals.css
@@ -4,11 +4,11 @@ button[modal] {
     font-family: 'Fira Code', monospace;
 }*/
 
-h3,
+/*h3,
 input:last-child {
     font-family: 'Press Start 2P', cursive;
     color: black;
-}
+}*/
 
 /*div {
     background-color: #414141;
