--- a/Dev-Blog/BlazorServer/Shared/Footer.razor.css
+++ b/Dev-Blog/BlazorServer/Shared/Footer.razor.css
@@ -2,10 +2,11 @@
     width: 100%;
     background-color: #414141;
     height: 50px;
-    margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    position: fixed;
+    bottom: 0;
 }
 
 span,
