--- a/Dev-Blog/BlazorServer/Shared/MainLayout.razor.css
+++ b/Dev-Blog/BlazorServer/Shared/MainLayout.razor.css
@@ -3,3 +3,9 @@
     margin: auto;
     align-items: center;
 }
+
+@media screen and (max-width: 1225px) {
+    main {
+        width: auto;
+    }
+}
