--- a/Dev-Blog/BlazorServer/Shared/NavMenu.razor
+++ b/Dev-Blog/BlazorServer/Shared/NavMenu.razor
@@ -3,7 +3,10 @@
 
 <nav>
     <!-- LOGO -->
-    <img src="/Imgs/Logo.png" height="115" width="100" />
+    <div>
+        <img src="/Imgs/Logo.png" height="115" width="100" />
+        <NavLink href="/">The Dev Blog</NavLink>
+    </div>
 
     <!-- PAGE LINKS -->
     <section navlinks>
