--- a/Dev-Blog/BlazorServer/wwwroot/css/Modals.css
+++ b/Dev-Blog/BlazorServer/wwwroot/css/Modals.css
@@ -15,9 +15,9 @@ input:last-child {
     border: none;
 }*/
 
-div {
+/*div {
     background-color: #414141;
-}
+}*/
 
 section[modal] {
     background-color: #414141;
