--- a/Dev-Blog/BlazorServer/Shared/NavMenu.razor.css
+++ b/Dev-Blog/BlazorServer/Shared/NavMenu.razor.css
@@ -6,6 +6,10 @@ section {
     margin-bottom: 5px;
 }
 
+div {
+    display: inline-block;
+}
+
 ::deep a,
 input,
 button,
@@ -25,6 +29,11 @@ nav {
     width: 100%;
 }
 
+div ::deep a {
+    color: indianred;
+    display: none;
+}
+
 section[navlinks] ::deep a:first-child {
     display: block;
     position: relative;
@@ -32,7 +41,8 @@ section[navlinks] ::deep a:first-child {
     color: indianred;
 }
 
-    section[navlinks] ::deep a:first-child:hover {
+    section[navlinks] ::deep a:first-child:hover,
+    div ::deep a:hover {
         color: #D67B7B;
     }
 
@@ -44,4 +54,41 @@ section:last-child {
 section,
 form[signout] {
     display: inline-block;
+}
+
+@media screen and (max-width: 870px) {
+    ::deep a,
+    button,
+    span,
+    section {
+        display: block;
+        margin: 15px;
+    }
+
+    input {
+        margin-left: 15px;
+    }
+
+    section[navlinks] {
+        margin-top: 25px;
+    }
+
+    section:last-child {
+        margin-top: 15px;
+        float: none;
+    }
+
+    section[navlinks] ::deep a:first-child {
+        display: none;
+    }
+
+    div {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+        div ::deep a {
+            display: inline-block;
+        }
 }
