--- a/Dev-Blog/BlazorServer/Pages/Posts.razor.css
+++ b/Dev-Blog/BlazorServer/Pages/Posts.razor.css
@@ -154,3 +154,9 @@ section[addComment] button {
         width: 448px;
     }
 }
+
+@media screen and (max-width: 680px) {
+    section[postInfo] p {
+        width: 100%;
+    }
+}
