--- a/Dev-Blog/BlazorServer/wwwroot/css/Modals.css
+++ b/Dev-Blog/BlazorServer/wwwroot/css/Modals.css
@@ -1,33 +1,26 @@
-﻿/*input[modal],
-textarea[modal],
-button[modal] {
-    font-family: 'Fira Code', monospace;
-}*/
-
-/*h3,
-input:last-child {
-    font-family: 'Press Start 2P', cursive;
-    color: black;
-}*/
-
-/*div {
+﻿.custom-modal {
     background-color: #414141;
-    border: none;
-}*/
-
-/*div {
-    background-color: #414141;
-}*/
-
-section[modal] {
-    background-color: #414141;
-    color: white;
+    z-index: 999999;
+    padding: 15px;
 }
 
-    section[modal] input {
+section[modal] input {
+    color: white;
+    display: block;
+    margin: 25px;
+    font-family: 'Fira Code', monospace;
+    background-color: #313131;
+    padding: 7.5px;
+}
+
+button[modal],
+input[modal] {
+    padding: 5px;
+}
+
+    button[modal]:hover,
+    input[modal]:hover {
+        cursor: pointer;
         color: white;
-        display: block;
-        margin: 25px;
-        font-family: 'Fira Code', monospace;
-        /*    border: 2px solid var(--primary_color);*/
+        background-color: #A2A2A2;
     }
