--- a/Dev-Blog/BlazorServer/Pages/Index.razor
+++ b/Dev-Blog/BlazorServer/Pages/Index.razor
@@ -4,19 +4,19 @@
 <!-- LATEST POST -->
 @if (latestPost == null)
 {
-<p>Loading...</p>
+    <p>Loading...</p>
 }
 else
 {
-<section post>
-    <div>
-        <span>@latestPost.UpdateNum</span>
-        <span>Latest Post</span>
-        <span>@latestPost.Date.ToShortDateString()</span>
-    </div>
-    <img src=@latestPost.ImgURL />
-    <p>@latestPost.Description</p>
-</section>
+    <section post>
+        <div>
+            <span>@latestPost.UpdateNum</span>
+            <span>Latest Post</span>
+            <span>@latestPost.Date.ToShortDateString()</span>
+        </div>
+        <img src=@latestPost.ImgURL />
+        <p>@latestPost.Description</p>
+    </section>
 }
 
 <!-- YOUTUBE LINK -->
@@ -24,7 +24,6 @@ else
     @*<iframe src="#"></iframe>*@
     <h2>YouTube Channel</h2>
     <h2>Comming Soon</h2>
-
 </section>
 
 <!-- SUGGESTION BOX -->
@@ -38,7 +37,7 @@ else
 {
     PostModel latestPost;
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
         latestPost = db.Post.OrderByDescending(x => x.Date)
                             .FirstOrDefault();
