--- a/Dev-Blog/BlazorServer/Pages/_Host.cshtml
+++ b/Dev-Blog/BlazorServer/Pages/_Host.cshtml
@@ -4,6 +4,7 @@
 @{
     Layout = null;
 }
+<link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
 
 <!DOCTYPE html>
 <html lang="en">
