--- a/Dev-Blog/BlazorServer/Shared/NavMenu.razor
+++ b/Dev-Blog/BlazorServer/Shared/NavMenu.razor
@@ -47,7 +47,8 @@
         options = new ModalOptions()
         {
             Class = "custom-modal",
-            DisableBackgroundCancel = true
+            FocusFirstElement = true,
+            OverlayCustomClass = "modal-background"
         };
     }
 
