--- a/Dev-Blog/BlazorServer/App.razor
+++ b/Dev-Blog/BlazorServer/App.razor
@@ -1,5 +1,5 @@
-<CascadingBlazoredModal>
-    <CascadingAuthenticationState>
+<CascadingAuthenticationState>
+    <CascadingBlazoredModal Animation="@ModalAnimation.FadeIn(.5)">
         <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
             <Found Context="routeData">
                 <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
@@ -10,5 +10,5 @@
                 </LayoutView>
             </NotFound>
         </Router>
-    </CascadingAuthenticationState>
-</CascadingBlazoredModal>
+    </CascadingBlazoredModal>
+</CascadingAuthenticationState>
