--- a/Dev-Blog/BlazorServer/Pages/Modals/EditPost.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/EditPost.razor
@@ -14,10 +14,9 @@ else
         <EditForm Model=@post OnValidSubmit=@UpdatePost>
             <DataAnnotationsValidator />
             <ValidationSummary />
-
             <InputTextArea @bind-Value=post.Description placeholder="description" />
             <InputText @bind-Value=post.UpdateNum placeholder="update number" />
-            <button modal type="submit">Update</button>
+            <input modal type="submit" value="Submit" />
         </EditForm>
     </section>
 }
@@ -37,6 +36,6 @@ else
     private async Task UpdatePost()
     {
         await _posts.UpdatePost(post);
-        await ModalInstance.CloseAsync(ModalResult.Ok("Success"));
+        await ModalInstance.CloseAsync();
     }
 }
